# packed-integers

./: Cargo.toml  README.md
src/: lib.rs  packed_element.rs  packed_int.rs
tests/: integration.rs
